--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,9 @@ services:
     container_name: media_db
     networks:
       - default
-    # ports:
-    #   - 9200:9200
-    #   - 9300:9300
+    ports:
+      - 9200:9200
+      - 9300:9300
     environment:
       bootstrap.memory_lock: "true"
       discovery.type: "single-node"
@@ -50,4 +50,15 @@ services:
       - ${PWD}/Elasticsearch/data:/usr/share/elasticsearch/data
       - ${PWD}/Elasticsearch/logs:/usr/share/elasticsearch/logs
       - ${PWD}/Elasticsearch/elasticsearch.yml:/etc/elasticsearch/elasticsearch.yml
+    restart: always
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.6.0
+    container_name: media_kibana
+    networks:
+      - default
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_HOSTS: "http://db:9200"
     restart: always
