--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       bootstrap.memory_lock: "true"
       discovery.type: "single-node"
       ELASTIC_PASSWORD: "media_elasticsearch_passwd"
-      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m" # TODO for development
       TAKE_FILE_OWNERSHIP: "true"
     ulimits:
       memlock:
