--- a/Web/package.json
+++ b/Web/package.json
@@ -5,7 +5,7 @@
   "author": "suecharo",
   "private": true,
   "scripts": {
-    "dev": "nuxt --port 8080",
+    "dev": "nuxt --hostname 0.0.0.0 --port 8080",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
