--- a/Web/package.json
+++ b/Web/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue ."
+    "lint": "eslint --ext .js,.vue .",
+    "bulk:mock": "./tests/generate-dummy-data.js"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
