--- a/Web/package.json
+++ b/Web/package.json
@@ -10,7 +10,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
-    "bulk:mock": "./tests/generate-dummy-data.js"
+    "generate:dummy": "./tests/generate-dummy-data.js"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
