--- a/Web/package.json
+++ b/Web/package.json
@@ -10,11 +10,13 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
-    "generate:dummy": "./tests/generate-dummy-data.js"
+    "dummy:generate": "./tests/generate-dummy-data.js",
+    "dummy:bulk": "./tests/bulk-elasticsearch.js"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6"
+    "@elastic/elasticsearch": "^7.6.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
