--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,14 @@ services:
       - ${PWD}/Elasticsearch/logs:/usr/share/elasticsearch/logs
       - ${PWD}/Elasticsearch/elasticsearch.yml:/etc/elasticsearch/elasticsearch.yml
     restart: always
+
+  kibana: # TODO for development
+    image: docker.elastic.co/kibana/kibana:7.6.0
+    container_name: media_kibana
+    networks:
+      - default
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_HOSTS: "http://db:9200"
+    restart: always
