--- a/Web/package.json
+++ b/Web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/proxy": "^1.3.3",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
