--- a/Web/package.json
+++ b/Web/package.json
@@ -18,7 +18,9 @@
     "@elastic/elasticsearch": "^7.6.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
-    "nuxt": "^2.0.0"
+    "chart.js": "^2.9.3",
+    "nuxt": "^2.0.0",
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
