--- a/Elasticsearch/elasticsearch.yml
+++ b/Elasticsearch/elasticsearch.yml
@@ -1,7 +1,2 @@
-# Default
-# index.number_of_shards: 5
-# index.number_of_replicas: 1
-
-# Develop
-index.number_of_shards: 1
-index.number_of_replicas: 0
+cluster.name: "docker-cluster"
+network.host: 0.0.0.0
