--- a/Web/package.json
+++ b/Web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt --hostname 0.0.0.0 --port 8080",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "nuxt start --hostname 0.0.0.0 --port 8080",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
