--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,29 @@
 version: "3"
 services:
-  web:
+  app:
     build:
       context: ./Web
       dockerfile: Dockerfile
     image: media_web:v1.0.0
-    container_name: media_web
-    ports:
-      - 8080:8080 # TODO for development
+    container_name: media_app
+    environment:
+      BASIC_AUTH_USER: "media"
+      BASIC_AUTH_PASS: "ascade"
+    networks:
+      - default
     volumes:
-      - ${PWD}/Web:/opt/MeDIA_Web
-    command: ["tail", "-f", "/dev/null"]
+      - ${PWD}/Web:/opt/MeDIA_Web:rw
+    command: ["npm", "run", "start"]
     restart: always
 
   db:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
     container_name: media_db
-    networks:
-      - default
-    ports:
-      - 9200:9200 # TODO for development
-      - 9300:9300 # TODO for development
     environment:
       bootstrap.memory_lock: "true"
       discovery.type: "single-node"
       ELASTIC_PASSWORD: "media_elasticsearch_passwd"
-      ES_JAVA_OPTS: "-Xms512m -Xmx512m" # TODO for development
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
       TAKE_FILE_OWNERSHIP: "true"
     ulimits:
       memlock:
@@ -34,19 +32,32 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    networks:
+      - default
     volumes:
-      - ${PWD}/Elasticsearch/data:/usr/share/elasticsearch/data
-      - ${PWD}/Elasticsearch/logs:/usr/share/elasticsearch/logs
-      - ${PWD}/Elasticsearch/elasticsearch.yml:/etc/elasticsearch/elasticsearch.yml
+      - ${PWD}/Elasticsearch/data:/usr/share/elasticsearch/data:rw
+      - ${PWD}/Elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ${PWD}/Elasticsearch/log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties:ro
     restart: always
+    logging:
+      driver: syslog
+      options:
+        syslog-facility: local0
+        tag: "{{.Name}}"
 
-  kibana: # TODO for development
-    image: docker.elastic.co/kibana/kibana:7.6.0
-    container_name: media_kibana
+  web:
+    image: nginx:1.17
+    container_name: media_web
     networks:
       - default
     ports:
-      - 5601:5601
-    environment:
-      ELASTICSEARCH_HOSTS: "http://db:9200"
+      - "0.0.0.0:8888:80"
+    volumes:
+      - ${PWD}/Nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ${PWD}/Nginx/.htpasswd:/etc/nginx/.htpasswd:ro
     restart: always
+
+networks:
+  default:
+    external:
+      name: media_network
