--- a/Web/package.json
+++ b/Web/package.json
@@ -5,9 +5,9 @@
   "author": "suecharo",
   "private": true,
   "scripts": {
-    "dev": "nuxt --hostname 0.0.0.0 --port 8080",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start --hostname 0.0.0.0 --port 8080",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
@@ -20,6 +20,7 @@
     "@nuxtjs/proxy": "^1.3.3",
     "chart.js": "^2.9.3",
     "nuxt": "^2.0.0",
+    "nuxt-basic-auth-module": "^1.3.2",
     "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
