--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,20 @@ services:
     image: media_web:v1.0.0
     container_name: media_app
     environment:
-      BASIC_AUTH_USER: "media"
       BASIC_AUTH_PASS: "ascade"
+      BASIC_AUTH_USER: "media"
+      BASIC_ENABLED: "true"
+      BROWSER_BASE_URL: "http://ext-host0004.ascade.co.jp:8888"
+      ES_URL: "http://db:9200"
+      NUXT_HOST: "0.0.0.0"
+      NUXT_PORT: "8080"
     networks:
       - default
     volumes:
       - ${PWD}/Web:/opt/MeDIA_Web:rw
-    command: ["npm", "run", "start"]
     restart: always
+    command: ["npm", "run", "start"]
+    # command: ["tail", "-f", "/dev/null"]
 
   db:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
@@ -48,14 +54,17 @@ services:
   web:
     image: nginx:1.17
     container_name: media_web
+    environment:
+      SERVER_NAME: "ext-host0004.ascade.co.jp"
+      APP_URL: "http://app:8080"
     networks:
       - default
     ports:
       - "0.0.0.0:8888:80"
     volumes:
-      - ${PWD}/Nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ${PWD}/Nginx/.htpasswd:/etc/nginx/.htpasswd:ro
+      - ${PWD}/Nginx/nginx.conf.tmpl:/etc/nginx/conf.d/nginx.conf.tmpl:ro
     restart: always
+    command: /bin/sh -c "envsubst '$$SERVER_NAME$$APP_URL' < /etc/nginx/conf.d/nginx.conf.tmpl > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
 
 networks:
   default:
