Update bulk command

--- a/Web/package.json
+++ b/Web/package.json
@@ -11,8 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
-    "dummy:generate": "./tests/generate-dummy-data.js",
-    "dummy:bulk": "./tests/bulk-elasticsearch.js"
+    "bulk": "./bin/bulk-elasticsearch.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.0",
