--- a/Web/package.json
+++ b/Web/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
+    "validate": "./bin/validate-data-json.js",
     "bulk": "./bin/bulk-elasticsearch.js"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "chart.js": "^2.9.3",
+    "jsonschema": "^1.2.5",
     "nuxt": "^2.0.0",
     "nuxt-basic-auth-module": "^1.3.2",
     "vue-chartjs": "^3.5.0"
