--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,23 +10,21 @@ services:
       BASIC_AUTH_PASS: "pass"
       BASIC_AUTH_USER: "media"
       BASIC_ENABLED: "true"
-      BROWSER_BASE_URL: "http://127.0.0.1:8888"
+      BROWSER_BASE_URL: "http://10.1.1.82:8888"
       ES_URL: "http://db:9200"
       NUXT_HOST: "0.0.0.0"
       NUXT_PORT: "8080"
     networks:
       - default
     volumes:
-      - ${PWD}/Web:/opt/MeDIA_Web
-      - node_modules:/opt/MeDIA_Web/node_modules
+      - ${PWD}/Web/data:/opt/MeDIA_Web/data
     restart: always
-    # command: ["npm", "run", "start"]
-    command: ["tail", "-f", "/dev/null"]
-    # logging:
-    #   driver: syslog
-    #   options:
-    #     syslog-facility: local0
-    #     tag: "{{.Name}}"
+    command: ["npm", "run", "start"]
+    logging:
+      driver: syslog
+      options:
+        syslog-facility: local0
+        tag: "{{.Name}}"
 
   db:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
@@ -51,17 +49,17 @@ services:
       - ${PWD}/Elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
       - ${PWD}/Elasticsearch/log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties:ro
     restart: always
-    # logging:
-    #   driver: syslog
-    #   options:
-    #     syslog-facility: local0
-    #     tag: "{{.Name}}"
+    logging:
+      driver: syslog
+      options:
+        syslog-facility: local0
+        tag: "{{.Name}}"
 
   web:
     image: nginx:1.17
     container_name: media_web
     environment:
-      SERVER_NAME: "127.0.0.1"
+      SERVER_NAME: "10.1.1.82"
       APP_URL: "http://app:8080"
     networks:
       - default
@@ -71,16 +69,14 @@ services:
       - ${PWD}/Nginx/nginx.conf.tmpl:/etc/nginx/conf.d/nginx.conf.tmpl:ro
     restart: always
     command: /bin/sh -c "envsubst '$$SERVER_NAME$$APP_URL' < /etc/nginx/conf.d/nginx.conf.tmpl > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
-    # logging:
-    #   driver: syslog
-    #   options:
-    #     syslog-facility: local0
-    #     tag: "{{.Name}}"
+    logging:
+      driver: syslog
+      options:
+        syslog-facility: local0
+        tag: "{{.Name}}"
 
 networks:
   default:
     external:
       name: media_network
 
-volumes:
-  node_modules:
