--- a/Web/package.json
+++ b/Web/package.json
@@ -12,9 +12,11 @@
     "lint": "eslint --ext .js,.vue .",
     "lint:fix": "eslint --fix --ext .js,.vue .",
     "validate": "./bin/validate-data-json.js",
+    "createIndex": "./bin/create-index.js",
     "bulk": "./bin/bulk-elasticsearch.js"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.6.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/proxy": "^1.3.3",
     "chart.js": "^2.9.3",
