--- a/Web/package.json
+++ b/Web/package.json
@@ -23,6 +23,7 @@
     "jsonschema": "^1.2.5",
     "nuxt": "^2.0.0",
     "nuxt-basic-auth-module": "^1.3.2",
+    "nuxt-clipboard2": "^0.2.1",
     "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
