--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
       - default
     volumes:
       - ${PWD}/Web:/opt/MeDIA_Web
-      - node_modules:/opt/MeDIA_Web/node_modules
+      - /opt/MeDIA_Web/node_modules
     restart: always
     command: ["tail", "-f", "/dev/null"]
 
@@ -64,6 +64,3 @@ networks:
   default:
     external:
       name: media_network
-
-volumes:
-  node_modules:
