--- a/Web/package.json
+++ b/Web/package.json
@@ -22,7 +22,7 @@
     "@nuxtjs/proxy": "^1.3.3",
     "chart.js": "^2.9.3",
     "jsonschema": "^1.2.5",
-    "nuxt": "^2.0.0",
+    "nuxt": "2.12.2",
     "nuxt-basic-auth-module": "^1.3.2",
     "nuxt-clipboard2": "^0.2.1",
     "vue-chartjs": "^3.5.0"
