--- a/Elasticsearch/log4j2.properties
+++ b/Elasticsearch/log4j2.properties
@@ -53,39 +53,9 @@ logger.index_indexing_slowlog.additivity = false
 appender.audit_rolling.type = Console
 appender.audit_rolling.name = audit_rolling
 appender.audit_rolling.layout.type = PatternLayout
-appender.audit_rolling.layout.pattern = {\
-"type": "audit", \
-"timestamp":"%d{yyyy-MM-dd'T'HH:mm:ss,SSSZ}"\
-%varsNotEmpty{, "node.name":"%enc{%map{node.name}}{JSON}"}\
-%varsNotEmpty{, "node.id":"%enc{%map{node.id}}{JSON}"}\
-%varsNotEmpty{, "host.name":"%enc{%map{host.name}}{JSON}"}\
-%varsNotEmpty{, "host.ip":"%enc{%map{host.ip}}{JSON}"}\
-%varsNotEmpty{, "event.type":"%enc{%map{event.type}}{JSON}"}\
-%varsNotEmpty{, "event.action":"%enc{%map{event.action}}{JSON}"}\
-%varsNotEmpty{, "user.name":"%enc{%map{user.name}}{JSON}"}\
-%varsNotEmpty{, "user.run_by.name":"%enc{%map{user.run_by.name}}{JSON}"}\
-%varsNotEmpty{, "user.run_as.name":"%enc{%map{user.run_as.name}}{JSON}"}\
-%varsNotEmpty{, "user.realm":"%enc{%map{user.realm}}{JSON}"}\
-%varsNotEmpty{, "user.run_by.realm":"%enc{%map{user.run_by.realm}}{JSON}"}\
-%varsNotEmpty{, "user.run_as.realm":"%enc{%map{user.run_as.realm}}{JSON}"}\
-%varsNotEmpty{, "user.roles":%map{user.roles}}\
-%varsNotEmpty{, "origin.type":"%enc{%map{origin.type}}{JSON}"}\
-%varsNotEmpty{, "origin.address":"%enc{%map{origin.address}}{JSON}"}\
-%varsNotEmpty{, "realm":"%enc{%map{realm}}{JSON}"}\
-%varsNotEmpty{, "url.path":"%enc{%map{url.path}}{JSON}"}\
-%varsNotEmpty{, "url.query":"%enc{%map{url.query}}{JSON}"}\
-%varsNotEmpty{, "request.method":"%enc{%map{request.method}}{JSON}"}\
-%varsNotEmpty{, "request.body":"%enc{%map{request.body}}{JSON}"}\
-%varsNotEmpty{, "request.id":"%enc{%map{request.id}}{JSON}"}\
-%varsNotEmpty{, "action":"%enc{%map{action}}{JSON}"}\
-%varsNotEmpty{, "request.name":"%enc{%map{request.name}}{JSON}"}\
-%varsNotEmpty{, "indices":%map{indices}}\
-%varsNotEmpty{, "opaque_id":"%enc{%map{opaque_id}}{JSON}"}\
-%varsNotEmpty{, "x_forwarded_for":"%enc{%map{x_forwarded_for}}{JSON}"}\
-%varsNotEmpty{, "transport.profile":"%enc{%map{transport.profile}}{JSON}"}\
-%varsNotEmpty{, "rule":"%enc{%map{rule}}{JSON}"}\
-%varsNotEmpty{, "event.category":"%enc{%map{event.category}}{JSON}"}\
-}%n
+appender.audit_rolling.layout.pattern = {"type": "audit", \
+    "timestamp":"%d{yyyy-MM-dd'T'HH:mm:ss,SSSZ}" \
+    %varsNotEmpty{, "node.name":"%enc{%map{node.name}}{JSON}"}%varsNotEmpty{, "node.id":"%enc{%map{node.id}}{JSON}"}%varsNotEmpty{, "host.name":"%enc{%map{host.name}}{JSON}"}%varsNotEmpty{, "host.ip":"%enc{%map{host.ip}}{JSON}"}%varsNotEmpty{, "event.type":"%enc{%map{event.type}}{JSON}"}%varsNotEmpty{, "event.action":"%enc{%map{event.action}}{JSON}"}%varsNotEmpty{, "user.name":"%enc{%map{user.name}}{JSON}"}%varsNotEmpty{, "user.run_by.name":"%enc{%map{user.run_by.name}}{JSON}"}%varsNotEmpty{, "user.run_as.name":"%enc{%map{user.run_as.name}}{JSON}"}%varsNotEmpty{, "user.realm":"%enc{%map{user.realm}}{JSON}"}%varsNotEmpty{, "user.run_by.realm":"%enc{%map{user.run_by.realm}}{JSON}"}%varsNotEmpty{, "user.run_as.realm":"%enc{%map{user.run_as.realm}}{JSON}"}%varsNotEmpty{, "user.roles":%map{user.roles}}%varsNotEmpty{, "origin.type":"%enc{%map{origin.type}}{JSON}"}%varsNotEmpty{, "origin.address":"%enc{%map{origin.address}}{JSON}"}%varsNotEmpty{, "realm":"%enc{%map{realm}}{JSON}"}%varsNotEmpty{, "url.path":"%enc{%map{url.path}}{JSON}"}%varsNotEmpty{, "url.query":"%enc{%map{url.query}}{JSON}"}%varsNotEmpty{, "request.method":"%enc{%map{request.method}}{JSON}"}%varsNotEmpty{, "request.body":"%enc{%map{request.body}}{JSON}"}%varsNotEmpty{, "request.id":"%enc{%map{request.id}}{JSON}"}%varsNotEmpty{, "action":"%enc{%map{action}}{JSON}"}%varsNotEmpty{, "request.name":"%enc{%map{request.name}}{JSON}"}%varsNotEmpty{, "indices":%map{indices}}%varsNotEmpty{, "opaque_id":"%enc{%map{opaque_id}}{JSON}"}%varsNotEmpty{, "x_forwarded_for":"%enc{%map{x_forwarded_for}}{JSON}"}%varsNotEmpty{, "transport.profile":"%enc{%map{transport.profile}}{JSON}"}%varsNotEmpty{, "rule":"%enc{%map{rule}}{JSON}"}%varsNotEmpty{, "event.category":"%enc{%map{event.category}}{JSON}"}}%n
 # "node.name" node name from the `elasticsearch.yml` settings
 # "node.id" node id which should not change between cluster restarts
 # "host.name" unresolved hostname of the local node
