--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,9 +2,9 @@ version: "3"
 services:
   app:
     build:
-      context: ./Web
+      context: ./app
       dockerfile: Dockerfile
-    image: media_web:v1.0.0
+    image: media_app:1.0.1
     container_name: media_app
     environment:
       BASIC_AUTH_PASS: "pass"
@@ -19,20 +19,18 @@ services:
     ports:
       - "0.0.0.0:8888:8888"
     volumes:
-      - ${PWD}/Web:/opt/MeDIA_Web
-      - /opt/MeDIA_Web/node_modules
-    restart: always
-    command: ["tail", "-f", "/dev/null"]
+      - ${PWD}/app:/app
+      - /app/node_modules
+    restart: on-failure
+    command: ["sleep", "infinity"]
 
   db:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
     container_name: media_db
     environment:
-      bootstrap.memory_lock: "true"
       discovery.type: "single-node"
       ELASTIC_PASSWORD: "media_elasticsearch_passwd"
-      ES_JAVA_OPTS: "-Xms1g -Xmx16g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
-      TAKE_FILE_OWNERSHIP: "true"
+      ES_JAVA_OPTS: "-Xms4g -Xmx4g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
     ulimits:
       memlock:
         soft: -1
@@ -45,7 +43,19 @@ services:
     volumes:
       - ${PWD}/Elasticsearch/data:/usr/share/elasticsearch/data:rw
       - ${PWD}/Elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-    restart: always
+      - ${PWD}/Elasticsearch/log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties:ro
+    restart: on-failure
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.9.3
+    container_name: media_kibana
+    environment:
+      ELASTICSEARCH_HOSTS: "http://db:9200"
+    ports:
+      - "0.0.0.0:5601:5601"
+    networks:
+      - default
+    restart: on-failure
 
 networks:
   default:
