--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3"
 services:
   app:
     build:
-      context: ./Web
+      context: ./app
       dockerfile: Dockerfile
-    image: media_web:v1.0.0
+    image: media_app:1.0.1
     container_name: media_app
     environment:
       BASIC_AUTH_PASS: "pass"
@@ -17,8 +17,8 @@ services:
     networks:
       - default
     volumes:
-      - ${PWD}/Web/data:/opt/MeDIA_Web/data
-    restart: always
+      - ${PWD}/app/data:/app/data
+    restart: on-failure
     command: ["wait-for-it", "-s", "db:9200", "--", "yarn", "start"]
     logging:
       driver: syslog
@@ -27,14 +27,12 @@ services:
         tag: "{{.Name}}"
 
   db:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
     container_name: media_db
     environment:
-      bootstrap.memory_lock: "true"
       discovery.type: "single-node"
       ELASTIC_PASSWORD: "media_elasticsearch_passwd"
-      ES_JAVA_OPTS: "-Xms1g -Xmx16g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
-      TAKE_FILE_OWNERSHIP: "true"
+      ES_JAVA_OPTS: "-Xms4g -Xmx4g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
     ulimits:
       memlock:
         soft: -1
@@ -48,27 +46,7 @@ services:
       - ${PWD}/Elasticsearch/data:/usr/share/elasticsearch/data:rw
       - ${PWD}/Elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
       - ${PWD}/Elasticsearch/log4j2.properties:/usr/share/elasticsearch/config/log4j2.properties:ro
-    restart: always
-    logging:
-      driver: syslog
-      options:
-        syslog-facility: local0
-        tag: "{{.Name}}"
-
-  web:
-    image: nginx:1.17
-    container_name: media_web
-    environment:
-      SERVER_NAME: "127.0.0.1"
-      APP_URL: "http://app:8080"
-    networks:
-      - default
-    ports:
-      - "0.0.0.0:8888:80"
-    volumes:
-      - ${PWD}/Nginx/nginx.conf.tmpl:/etc/nginx/conf.d/nginx.conf.tmpl:ro
-    restart: always
-    command: /bin/sh -c "envsubst '$$SERVER_NAME$$APP_URL' < /etc/nginx/conf.d/nginx.conf.tmpl > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    restart: on-failure
     logging:
       driver: syslog
       options:
