--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,8 @@
   "name": "media-app",
   "version": "1.0.1",
   "description": "Web application for microflora information and clinical multimodal data",
-  "main": "index.js",
   "repository": "https://github.com/MeDIA-team/MeDIA",
   "author": "RIKEN",
-  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
@@ -28,14 +26,20 @@
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^7.10.0",
+    "@mdi/font": "^5.8.55",
     "@nuxt/types": "^2.14.11",
     "@nuxt/typescript-build": "^2.0.3",
+    "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "dayjs": "^1.9.7",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "nuxt-basic-auth-module": "^1.3.3",
+    "nuxt-clipboard2": "^0.2.1",
     "prettier": "^2.2.1"
   }
 }
