--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile
-    image: media_app:1.0.1
+    image: media_app:${MEDIA_DOCKER_IMAGE_TAG}
     container_name: media_app
     environment:
       BASIC_AUTH_PASS: "pass"
