--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
       context: ./app
       dockerfile: Dockerfile
     image: media_app:dev
-    container_name: media_app
+    container_name: media_app_dev
     environment:
       BASIC_AUTH_PASS: "pass"
       BASIC_AUTH_USER: "media"
@@ -25,7 +25,7 @@ services:
     command: ["sleep", "infinity"]
 
   db:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.1
     container_name: media_db
     environment:
       discovery.type: "single-node"
@@ -47,7 +47,7 @@ services:
     restart: on-failure
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.9.3
+    image: docker.elastic.co/kibana/kibana:7.13.1
     container_name: media_kibana
     environment:
       ELASTICSEARCH_HOSTS: "http://db:9200"
