Fix by formatter

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
-    "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
+    "lib": [
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "DOM"
+    ],
     "allowJs": true,
     "sourceMap": true,
     "noEmit": true,
@@ -10,11 +14,24 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ],
+      "@/*": [
+        "src/*"
+      ]
     },
-    "typeRoots": ["./node_modules/@types", "./@nuxt/types", "./src/types"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@nuxt/types",
+      "./src/types",
+      "./node_modules/vuetify/types"
+    ],
     "esModuleInterop": true
   },
-  "exclude": ["node_modules", ".nuxt", "dist"]
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "dist"
+  ]
 }
