--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "nuxt-basic-auth-module": "^1.4.0",
     "nuxt-clipboard2": "^0.2.1",
     "prettier": "^2.3.1",
+    "ts-node": "^10.0.0",
     "vue-chartjs": "^3.5.1"
   }
 }
