--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt-ts generate",
     "start": "nuxt-ts start",
     "lint": "eslint --ext .ts,.js,.vue .",
+    "test": "jest --silent",
     "exec-ts-node": "ts-node --compiler-options=\"{\\\"module\\\": \\\"commonjs\\\"}\"",
     "bulk:entry": "yarn exec-ts-node ./command/esBulkEntry.ts",
     "bulk:patient": "yarn exec-ts-node ./command/esBulkPatient.ts",
@@ -32,15 +33,18 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/jest": "^26.0.23",
     "chart.js": "^3.3.2",
     "dayjs": "^1.10.5",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.4",
     "nuxt-basic-auth-module": "^1.4.0",
     "nuxt-clipboard2": "^0.2.1",
     "prettier": "^2.3.1",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "vue-chartjs": "^3.5.1"
   }
