--- a/app/Dockerfile-dev
+++ b/app/Dockerfile-dev
@@ -1,14 +1,14 @@
 FROM node:16.3.0-buster-slim
 
 RUN apt update && \
-    apt install -y --no-install-recommends \
-    build-essential \
-    curl \
-    python-dev \
-    tini \
-    wait-for-it && \
-    apt clean &&\
-    rm -rf /var/lib/apt/lists/*
+  apt install -y --no-install-recommends \
+  build-essential \
+  curl \
+  python-dev \
+  tini \
+  wait-for-it && \
+  apt clean &&\
+  rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -16,6 +16,8 @@ COPY package*.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
 COPY . .
+
+ENV PATH /app/node_modules/.bin:$PATH
 
 ENV NUXT_HOST 0.0.0.0
 ENV NUXT_PORT 8080
