--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/jest": "^26.0.23",
+    "@vue/test-utils": "^1.2.1",
     "chart.js": "^3.3.2",
     "dayjs": "^1.10.5",
     "eslint": "^7.28.0",
@@ -48,6 +49,7 @@
     "prettier": "^2.3.1",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
-    "vue-chartjs": "^3.5.1"
+    "vue-chartjs": "^3.5.1",
+    "vue-jest": "^3.0.7"
   }
 }
