--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,14 +10,14 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["src/*"],
+      "~/*": ["*"],
       "@/*": ["src/*"]
     },
     "typeRoots": [
-      "./node_modules/@types",
-      "./@nuxt/types",
-      "./src/types",
-      "./node_modules/vuetify/types"
+      "./node_modules/@types"
+      // "./@nuxt/types",
+      // "./src/types",
+      // "./node_modules/vuetify/types"
     ],
     "esModuleInterop": true
   },
