--- a/app/package.json
+++ b/app/package.json
@@ -6,10 +6,10 @@
   "author": "RIKEN",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "generate": "nuxt-ts generate",
-    "start": "nuxt-ts start",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
+    "start": "nuxt start",
     "lint": "eslint --ext .ts,.js,.vue .",
     "exec-ts-node": "ts-node -r tsconfig-paths/register --compiler-options=\"{\\\"module\\\": \\\"commonjs\\\"}\"",
     "config:validate": "yarn exec-ts-node ./command/configValidate.ts",
@@ -37,7 +37,7 @@
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/jest": "^26.0.23",
     "@vue/test-utils": "^1.2.1",
-    "chart.js": "^3.3.2",
+    "chart.js": "~2",
     "dayjs": "^1.10.5",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
