Add TAKE_FILE_OWNERSHIP environment val. for docker rootless mode.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,7 @@ services:
       discovery.type: "single-node"
       ELASTIC_PASSWORD: "media_elasticsearch_passwd"
       ES_JAVA_OPTS: "-Xms4g -Xmx4g -Xlog:disable -Xlog:all=warning:stderr:utctime,level,tags -Xlog:gc=warning:stderr:utctime"
+      TAKE_FILE_OWNERSHIP: "true"
     ulimits:
       memlock:
         soft: -1
