--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,18 +2,20 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
+    "moduleResolution": "Node",
     "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
+    "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
-    "noEmit": true,
     "strict": true,
-    "moduleResolution": "node",
+    "noEmit": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["*"],
-      "@/*": ["src/*"]
+      "~/*": ["./*"],
+      "@/*": ["./src/*"]
     },
-    "esModuleInterop": true
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "vuetify"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
